--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,10 +2,12 @@
   --color-primary: #eb2f64;
   --color-primary-light: #ff3366;
   --color-primary-dark: #ba265d;
+
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
   --color-grey-light-3: #f0eeee;
   --color-grey-light-4: #ccc;
+
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
@@ -24,7 +26,7 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 62.5%; //1rem = 16px (100%), therefore for 1rem to be 10px we do -- 10/16 (62.5%)
 }
 
 body {
@@ -32,10 +34,12 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-grey-dark-2);
-  background-image: linear-gradient(to right bottom, var(--color-primary-dark, var(--color-primary-dark)));
+
+  background-image: linear-gradient(
+    to right bottom,
+    var(--color-primary-dark, var(--color-primary-dark))
+  );
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
 }
-
-/*# sourceMappingURL=style.css.map */
