--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,26 +2,64 @@
 /// LOGO
 .logo {
   height: 3.25rem;
+  margin-left: 3rem;
 }
 
 ///////////////////////////////////
 /// SEARCH
 .search {
+  //   background-color: orangered;
+  flex: 0 0 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   &__input {
+    padding: 0.7rem 2rem;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-grey-light-2);
+    border: none;
+    border-radius: 100px;
+    width: 90%;
+    transition: all 0.3s;
+    margin-right: -3.25rem;
+    &:focus {
+      outline: none;
+      width: 100%;
+      background-color: var(--color-grey-light-3);
+    }
+    &::placeholder {
+      //   font-weight: 300;
+      color: var(--color-grey-light-4);
+    }
+  }
+  &__input:focus + &__button {
+    background-color: var(--color-grey-light-3);
   }
 
   &__button {
+    border: none;
+    background-color: var(--color-grey-light-2);
+    &:focus {
+      outline: none;
+    }
+    &:active {
+      transform: translateY(2px);
+    }
   }
 
   &__icon {
     height: 2rem;
     width: 2rem;
+    fill: var(--color-grey-dark-3);
   }
 }
 
 ///////////////////////////////////
 /// USER NAVIGATION
 .user-nav {
+  background-color: greenyellow;
   &__icon-box {
   }
 
