--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ body {
 
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 .search {
@@ -122,15 +122,47 @@ body {
 }
 
 .user-nav {
-  background-color: greenyellow;
+  display: flex;
+  align-self: stretch;
+  justify-content: center;
+  align-items: center;
+}
+.user-nav > * {
+  padding: 0 2rem;
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.user-nav > *:hover {
+  background-color: var(--color-grey-light-2);
+}
+.user-nav__icon-box {
+  position: relative;
 }
 .user-nav__icon {
   height: 2.25rem;
   width: 2.25rem;
+  fill: var(--color-grey-dark-2);
+}
+.user-nav__notification {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.85rem;
+  background-color: var(--color-primary);
+  height: 1.75rem;
+  width: 1.75rem;
+  color: #fff;
+  border-radius: 100px;
+  position: absolute;
+  top: 1.4rem;
+  right: 1.2rem;
 }
 .user-nav__user-photo {
   height: 3.75rem;
   border-radius: 50%;
+  margin-right: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
