--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,7 +2,7 @@
 /// LOGO
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 ///////////////////////////////////
@@ -59,16 +59,45 @@
 ///////////////////////////////////
 /// USER NAVIGATION
 .user-nav {
-  background-color: greenyellow;
+  display: flex;
+  align-self: stretch;
+  justify-content: center;
+  align-items: center;
+  & > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+    &:hover {
+      background-color: var(--color-grey-light-2);
+    }
+  }
+
   &__icon-box {
+    position: relative;
   }
 
   &__icon {
     height: 2.25rem;
     width: 2.25rem;
+    fill: var(--color-grey-dark-2);
   }
 
   &__notification {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    background-color: var(--color-primary);
+    height: 1.75rem;
+    width: 1.75rem;
+    color: #fff;
+    border-radius: 100px;
+    position: absolute;
+    top: 1.4rem;
+    right: 1.2rem;
   }
 
   &__user {
@@ -77,6 +106,7 @@
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
+    margin-right: 1rem;
   }
 
   &__user-name {
