--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -22,11 +22,11 @@
     border: none;
     border-radius: 100px;
     width: 90%;
-    transition: all 0.3s;
+    transition: all 0.7s;
     margin-right: -3.25rem;
     &:focus {
       outline: none;
-      width: 100%;
+      width: 120%;
       background-color: var(--color-grey-light-3);
     }
     &::placeholder {
@@ -111,4 +111,72 @@
 
   &__user-name {
   }
+}
+
+///////////////////////////////////
+/// SIDE NAVIGATION
+.side-nav {
+  list-style: none;
+  font-size: 1.4rem;
+  margin-top: 3.5rem;
+  &__item {
+    position: relative;
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  &__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background-color: var(--color-primary);
+    // transform-origin: bottom;
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
+  }
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__link:link,
+  &__link:visited {
+    color: var(--color-grey-light-1);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+
+    position: relative;
+    z-index: 10;
+
+    display: flex;
+    align-items: center;
+  }
+
+  &__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+
+    margin-right: 2rem;
+    fill: currentColor;
+  }
+}
+
+///////////////////////////////////
+/// LEGAL TEXT
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.25rem;
 }
