--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
 }
 
 .hotel-view {
-  background-color: orangered;
+  background-color: #fff;
   height: 80rem;
   flex: 1;
 }
@@ -188,7 +188,7 @@ body {
   width: 3px;
   background-color: var(--color-primary);
   transform: scaleY(0);
-  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
+  transition: transform 0.2s, width 0.3s cubic-bezier(1, 0, 0, 1) 0.2s;
 }
 .side-nav__item:hover::before, .side-nav__item--active::before {
   transform: scaleY(1);
@@ -220,6 +220,27 @@ body {
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.25rem;
+}
+
+.gallery {
+  display: flex;
+}
+.gallery__photo {
+  display: block;
+  width: 100%;
+}
+
+.overview {
+  display: flex;
+}
+.overview__stars {
+  margin-right: auto;
+  background-color: orangered;
+}
+.overview__icon-star, .overview__icon-location-pin {
+  height: 1.75rem;
+  width: 1.75rem;
+  fill: var(--color-primary);
 }
 
 /*# sourceMappingURL=style.css.map */
