--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,6 +13,8 @@
   --color-grey-dark-3: #999;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+
+  --line: solid 1px var(--color-grey-light-2);
 }
 
 * {
