--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -195,15 +195,29 @@
 /// HOTEL OVERVIEW
 .overview {
   display: flex;
-  // justify-content: space-between;
+  align-items: center;
+  border-bottom: var(--line);
+
   &__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
   }
 
   &__stars {
     margin-right: auto;
-    background-color: orangered;
+    // background-color: orangered;
+    display: flex;
   }
 
+  &__location {
+    // margin-right: 2.25rem;
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+  }
   &__icon-star,
   &__icon-location-pin {
     height: 1.75rem;
@@ -211,12 +225,69 @@
     fill: var(--color-primary);
   }
 
+  &__icon-location-pin {
+    margin-right: 0.5rem;
+  }
+
   &__rating {
+    background-color: var(--color-primary);
+    color: #fff;
+    margin-left: 3rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
-  &__average {
+  &__rating-average {
+    font-size: 2.5rem;
+    font-weight: 300;
+    margin-bottom: -5px;
   }
 
-  &__count {
+  &__rating-count {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+  }
+}
+
+///////////////////////////////////
+/// BUTTON INLINE
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.2s;
+
+  &:hover {
+    color: var(--color-grey-dark-1);
+  }
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: none;
   }
 }
