--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,6 +13,7 @@
   --color-grey-dark-3: #999;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 
   --line: solid 1px var(--color-grey-light-2);
 }
