--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -291,3 +291,39 @@
     box-shadow: none;
   }
 }
+
+///////////////////////////////////
+/// Paragraph
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+///////////////////////////////////
+/// List
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+
+  display: flex;
+  flex-wrap: wrap;
+  &__item {
+    flex: 0 0 50%;
+  }
+
+  &__item::before {
+    content: "";
+    height: 1rem;
+    width: 1rem;
+    display: inline-block;
+    margin-right: 0.7rem;
+
+    background-color: var(--color-primary);
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover;
+  }
+}
+
+///////////////////////////////////
+/// Recommend
