--- a/css/style.css
+++ b/css/style.css
@@ -362,4 +362,24 @@ body {
   mask-size: cover;
 }
 
+.recomment {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center;
+}
+.recomment__count {
+  margin-right: auto;
+}
+.recomment__photo {
+  box-sizing: content-box;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  border: 3px solid #fff;
+}
+.recomment__photo:not(:last-child) {
+  margin-right: -1.5rem;
+}
+
 /*# sourceMappingURL=style.css.map */
