--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -266,8 +266,15 @@
   cursor: pointer;
   transition: all 0.2s;
 
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
   &:hover {
     color: var(--color-grey-dark-1);
+    span {
+      margin-left: 8px;
+    }
   }
   &:focus {
     outline: none;
@@ -360,8 +367,13 @@
   box-shadow: var(--shadow-light);
   padding: 3rem;
   margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
   &__text {
     margin-bottom: 2rem;
+    z-index: 20;
+    position: relative;
   }
 
   &__user {
@@ -396,5 +408,16 @@
     color: var(--color-primary);
     font-size: 2.2rem;
     font-weight: 300;
+  }
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    font-size: 20rem;
+    line-height: 1;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif;
+    z-index: 1;
   }
 }
