--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -54,4 +54,8 @@
 .user-reviews {
   // background-color: yellowgreen;
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
