--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -119,10 +119,21 @@
   list-style: none;
   font-size: 1.4rem;
   margin-top: 3.5rem;
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+      @media only screen and (max-width: $bp-medium) {
+        margin: 0;
+      }
+    }
+    @media only screen and (max-width: $bp-medium) {
+      flex: 1;
     }
   }
 
@@ -161,6 +172,10 @@
 
     display: flex;
     align-items: center;
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+      padding: 2rem;
+    }
   }
 
   &__icon {
@@ -179,6 +194,9 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.25rem;
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 ///////////////////////////////////
@@ -346,6 +364,7 @@
   }
 
   &__friends {
+    display: flex;
   }
 
   &__photo {
@@ -370,6 +389,10 @@
   position: relative;
   overflow: hidden;
   z-index: 0;
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
   &__text {
     margin-bottom: 2rem;
     z-index: 20;
@@ -427,6 +450,9 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
   &__book-now {
     font-size: 2rem;
     font-weight: 300;
