--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -21,7 +21,8 @@
 $bp-largest: 75em; //1200px  (1200/16)
 $bp-large: 68.75em; //1100px (1100/16)
 $bp-medium: 56.25em; //900px (900/16)
-
+$bp-small: 37.5em; //600px   (600/16)
+$bp-smallest: 31.25em; //500px (500/16)
 * {
   margin: 0;
   padding: 0;
