--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -13,6 +13,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  @media only screen and (max-width: $bp-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+  }
+
   &__input {
     padding: 0.7rem 2rem;
     font-family: inherit;
@@ -176,6 +182,11 @@
       justify-content: center;
       padding: 2rem;
     }
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
+    }
   }
 
   &__icon {
@@ -184,6 +195,12 @@
 
     margin-right: 2rem;
     fill: currentColor;
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: 0.4rem;
+      height: 1.5rem;
+      width: 1.5rem;
+    }
   }
 }
 
@@ -222,6 +239,10 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      paddding: 1.25rem 2rem;
+    }
   }
 
   &__stars {
@@ -257,17 +278,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
   }
 
   &__rating-average {
     font-size: 2.5rem;
     font-weight: 300;
     margin-bottom: -5px;
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
   }
 
   &__rating-count {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     text-transform: uppercase;
+    @media only screen and (max-width: $bp-small) {
+      font-size: 0.9rem;
+    }
   }
 }
 
